<resources>
    <string name="app_name">in the dark</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="digite_seu_e_mail">Enter your email</string>
    <string name="digite_sua_senha">Enter your password</string>
    <string name="entrar">Login</string>
    <string name="cadastrar">Register</string>
    <string name="todo">todo</string>
    <string name="logo">logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Invalid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="title_notifications">Notifications</string>

    <string name="digitDate">Enter your date of birth</string>
    <string name="digitName">Enter your name</string>
    <string name="username">Name</string>
    <string name="dateBirth">date of birth</string>
    <string name="genero">Biological Gender</string>
    <string name="generomas">Male</string>
    <string name="generofem">Female</string>
    <string name="altura">Height</string>

</resources>